[package]
name = "ip-replacement"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
color-eyre = "0.6.5"

# Deserialization
serde = { version = "1.0.228", features = ["derive"] }
soml = { version = "0.2.0", default-features = false, features = [
    "strict",
    "std",
] }
url = "2.5.8"
base64-simd = "0.8.0"

# HTTP/HTTPS stack
nyquest = { version = "0.4.0", features = ["blocking"] }
nyquest-preset = { version = "0.4.0", features = ["blocking"] }
ahash = { version = "0.8.12", default-features = false, features = ["no-rng", "std"] }
